JI-6405 WIP fix styling for widget overlapping content in editor

--- a/styles/scss/_form-field.scss
+++ b/styles/scss/_form-field.scss
@@ -32,6 +32,7 @@
   .h5p-dialog-anchor {
     position: relative;
     margin: -16px;
+    width: 100%;
   }
 }
 
